[package]
name = "cannon-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cannon-rs"
path = "bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundry-config = { git = "https://github.com/foundry-rs/foundry" }
foundry-common = { git = "https://github.com/foundry-rs/foundry" }
foundry-cli = { git = "https://github.com/foundry-rs/foundry" }
itertools = "0.13.0"
clap = "4.5.20"
alloy-primitives = "0.8.7"
alloy-json-abi = "0.8.7"
eyre = "0.6.12"
yansi = "1.0.1"
serde = "1.0.210"
foundry-compilers = "0.11.4"
toml = "0.8.19"

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }
